# mloggerai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
ailogger/: errosolver.py
mlogger-vscode-plugin/vscode-error-solver/: error-test.js  package-lock.json  package.json  tsconfig.json  vscode-error-solver-0.0.1.vsix
mlogger-vscode-plugin/vscode-error-solver/src/: extension.ts
mloggerai/: errosolver.py
mloggerai-c++/: CMakeLists.txt  build_lib.sh
mloggerai-c++/ErrorSolverFixed/: CMakeLists.txt
mloggerai-c++/ErrorSolverFixed/examples/: main.cpp
mloggerai-c++/ErrorSolverFixed/include/: ErrorSolver.hpp
mloggerai-c++/ErrorSolverFixed/src/: ErrorSolver.cpp
mloggerai-c++/examples/: flexible_main_example.cpp  main.cpp  main_builder_example.cpp  main_facade_example.cpp
mloggerai-c++/include/: ErrorSolver.hpp  ErrorSolverBuilder.hpp  ErrorSolverFacade.hpp
mloggerai-c++/src/: ErrorSolver.cpp  ErrorSolverBuilder.cpp  ErrorSolverFacade.cpp
mloggerai-chrome-plugin/ai-error-debugger/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
mloggerai-chrome-plugin/ai-error-debugger/error-debugger-cloude/: README.md  background.js  content.js  index.html  manifest.json  options.html  options.js  popup.html  popup.js
mloggerai-intellij-plugin/: build.gradle.kts  build.sh  settings.gradle.kts
mloggerai-intellij-plugin/src/main/java/com/mloggerai/: ErrorSolverService.java  ErrorSolverServiceOld.java  ErrorSolverServiceWorking.java  ErrorSolverToolWindowFactory.java
mloggerai-intellij-plugin/src/main/java/com/mloggerai/plugin/: ErrorSolverService.kt  ErrorSolverToolWindowFactory.kt  MLoggerAIBundle.java  MLoggerAIBundle.kt  MLoggerAISettings.java  MLoggerAISettingsConfigurable.java  MLoggerAISuggestAction.java
mloggerai-intellij-plugin/src/main/resources/messages/: MLoggerAIBundle.properties  MLoggerAIBundle_it.properties
mloggerai-java/: build.gradle
mloggerai-java/src/main/java/com/mloggerai/: ErrorSolver.java  Main.java
mloggerai-java/src/main/resources/: logback.xml
mloggerai-js/: README.md  mloggerai.js  package.json  test.js
mloggerai-py/: README.md  mloggerai_daemon_filtered_ui.py  mloggerai_daemon_ui.py  mloggerai_daemon_with_filter.py  pyproject.toml
mloggerai-py/daemon_and_webui/: READNE_DAEMON.md  mlogger_daemon_filter_ui.py  mloggerai-daemon.service  mloggerai_docker_daemon_filtered_ui.py  mloggerai_docker_daemon_ui.py
mloggerai-py/daemon_and_webui/logs/: docker_events.jsonl
mloggerai-py/daemon_and_webui/static/: index.html
mloggerai-py/logs/: docker_events.jsonl  events.jsonl
mloggerai-py/mloggerai/: __init__.py  errorsolver.py  errosolver.py
mloggerai-py/tests/: test_errorsolver.py  test_errorsolverbuilder.py
mloggerai-rust/: .cargoignore  Cargo.toml  README.md
mloggerai-rust/mloggerai_external_lib/: Cargo.toml  README.md
mloggerai-rust/mloggerai_external_lib/src/: lib.rs  main.rs
mloggerai-rust/src/: errorsolver.rs  main.rs
mloggerai-ts/: .env.example  README.md  package.json  tsconfig.json
mloggerai-ts/examples/: simple.ts
mloggerai-ts/src/: ErrorSolver.ts
mloggerai-vscode-plugin/: error-test.js  package.json
mloggerai-vscode-plugin/src/: extension.ts
