[package]
name = "mloggerai"
version = "0.0.1"
edition = "2024"
description = "Rust library for analyzing logs and obtaining AI solutions via OpenAI Client On-Prem or On-Cloud"
authors = ["Mirko Perrone <USE github ISSUE section>"]
license = "MIT"
repository = "https://github.com/perronemirko/mloggerai/tree/main/mloggerai-rust"
readme = "README.md"
keywords = ["ai", "openai", "logs", "errorsolver","Ollama", "llama.cpp" ,"lm-studio", "OpenApi", "Logger", "LLM" ]
categories = ["development-tools", "algorithms"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

[lib]
name = "error_solver"
path = "src/lib.rs"